// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentsContainer Snapshot > renders default state with no comments correctly 1`] = `
"<div data-v-e7198dba="" class="comments" style="background: transparent;">
  <div data-v-e7198dba="" class="innerWrapper">
    <div data-v-e7198dba="" class="userName">
      <div data-v-e7198dba="" class="addComment">
        <div data-v-e7198dba="" class="w-12 rounded-t-full">
          <!--v-if-->
        </div>
        <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
    <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`CommentsContainer Snapshot > renders with a single comment correctly 1`] = `
"<div data-v-e7198dba="" class="comments" style="background: transparent;">
  <div data-v-e7198dba="" class="innerWrapper">
    <div data-v-e7198dba="" class="userName">
      <div data-v-e7198dba="" class="addComment">
        <div data-v-e7198dba="" class="w-12 rounded-t-full">
          <!--v-if-->
        </div>
        <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
    <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true">
      <div data-v-d830712d="" data-v-e7198dba="" class="comment-wrapper">
        <div data-v-d830712d="" class="wrapper">
          <div data-v-d830712d="" class="w-12 rounded-t-full">
            <!---->
          </div>
          <div data-v-d830712d="" class="comment-wrapper">
            <div data-v-d830712d="" class="name-wrapper">
              <div data-v-d830712d="" class="name text-(--ui-primary)">John Doe</div><span data-v-d830712d="" class="dot">•</span><span data-v-d830712d="" class="time" title="Invalid Date">56 years ago</span>
              <!--v-if-->
              <div data-v-d830712d="" class="expand hover:text-(--ui-primary)"><span data-v-d830712d="" title="Hide Comment">−</span></div>
            </div>
            <div data-v-d830712d="" class="comment bg-white text-black dark:bg-neutral-800 dark:text-white">Great post!</div>
            <div data-v-d830712d="" class="comment-box text-black dark:text-white" style="display: none;">
              <div data-v-d830712d="" class="user-name text-(--ui-primary)">John Doe</div><textarea data-v-d830712d="" name="addUpdate" class="add-comment bg-white dark:bg-neutral-800" placeholder="Update message" spellcheck="false" aria-label="Add Comment"></textarea><button data-v-d830712d="" aria-label="Update" class="bg-primary hover:bg-primary-800"><span data-v-d830712d="">Update</span></button>
              <div data-v-d830712d="" class="remaining-letter bg-primary"><span data-v-d830712d="">1000</span></div>
            </div>
            <div data-v-d830712d="" class="reply hover:text-(--ui-primary)" style="display: none;">
              <div data-v-d830712d="">Never mind</div>
            </div>
            <div data-v-d830712d="" class="reply">
              <div data-v-d830712d="" class="hover:text-(--ui-primary)">Reply</div>
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <transition-group-stub data-v-d830712d="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
            <!--v-if-->
          </div>
        </div>
      </div>
    </transition-group-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`CommentsContainer Snapshot > renders with multiple comments and custom styling correctly 1`] = `
"<div data-v-e7198dba="" class="comments" style="background: #f0f0f0;">
  <div data-v-e7198dba="" class="innerWrapper">
    <div data-v-e7198dba="" class="userName">
      <div data-v-e7198dba="" class="addComment">
        <div data-v-e7198dba="" class="w-12 rounded-t-full">
          <!--v-if-->
        </div>
        <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
    <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true">
      <div data-v-d830712d="" data-v-e7198dba="" class="comment-wrapper">
        <div data-v-d830712d="" class="wrapper">
          <div data-v-d830712d="" class="w-12 rounded-t-full"><img data-v-d830712d="" alt="Avatar" data-nuxt-img="" srcset="https://example.com/alice.jpg 1x, https://example.com/alice.jpg 2x" class="h-12 w-12 rounded-full p-1" src="https://example.com/alice.jpg"></div>
          <div data-v-d830712d="" class="comment-wrapper">
            <div data-v-d830712d="" class="name-wrapper">
              <div data-v-d830712d="" class="name text-(--ui-primary)">Alice</div><span data-v-d830712d="" class="dot">•</span><span data-v-d830712d="" class="time" title="Invalid Date">56 years ago</span>
              <!--v-if-->
              <div data-v-d830712d="" class="expand hover:text-(--ui-primary)"><span data-v-d830712d="" title="Hide Comment">−</span></div>
            </div>
            <div data-v-d830712d="" class="comment bg-white text-black dark:bg-neutral-800 dark:text-white">Nice work!</div>
            <div data-v-d830712d="" class="comment-box text-black dark:text-white" style="display: none;">
              <div data-v-d830712d="" class="user-name text-(--ui-primary)">Alice</div><textarea data-v-d830712d="" name="addUpdate" class="add-comment bg-white dark:bg-neutral-800" placeholder="Update message" spellcheck="false" aria-label="Add Comment"></textarea><button data-v-d830712d="" aria-label="Update" class="bg-primary hover:bg-primary-800"><span data-v-d830712d="">Update</span></button>
              <div data-v-d830712d="" class="remaining-letter bg-primary"><span data-v-d830712d="">1000</span></div>
            </div>
            <div data-v-d830712d="" class="reply hover:text-(--ui-primary)" style="display: none;">
              <div data-v-d830712d="">Never mind</div>
            </div>
            <div data-v-d830712d="" class="reply">
              <div data-v-d830712d="" class="hover:text-(--ui-primary)">Reply</div>
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <transition-group-stub data-v-d830712d="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div data-v-d830712d="" data-v-e7198dba="" class="comment-wrapper">
        <div data-v-d830712d="" class="wrapper">
          <div data-v-d830712d="" class="w-12 rounded-t-full"><img data-v-d830712d="" alt="Avatar" data-nuxt-img="" srcset="https://example.com/bob.jpg 1x, https://example.com/bob.jpg 2x" class="h-12 w-12 rounded-full p-1" src="https://example.com/bob.jpg"></div>
          <div data-v-d830712d="" class="comment-wrapper">
            <div data-v-d830712d="" class="name-wrapper">
              <div data-v-d830712d="" class="name text-(--ui-primary)">Bob</div><span data-v-d830712d="" class="dot">•</span><span data-v-d830712d="" class="time" title="Invalid Date">56 years ago</span>
              <!--v-if-->
              <div data-v-d830712d="" class="expand hover:text-(--ui-primary)"><span data-v-d830712d="" title="Hide Comment">−</span></div>
            </div>
            <div data-v-d830712d="" class="comment bg-white text-black dark:bg-neutral-800 dark:text-white">I disagree</div>
            <div data-v-d830712d="" class="comment-box text-black dark:text-white" style="display: none;">
              <div data-v-d830712d="" class="user-name text-(--ui-primary)">Bob</div><textarea data-v-d830712d="" name="addUpdate" class="add-comment bg-white dark:bg-neutral-800" placeholder="Update message" spellcheck="false" aria-label="Add Comment"></textarea><button data-v-d830712d="" aria-label="Update" class="bg-primary hover:bg-primary-800"><span data-v-d830712d="">Update</span></button>
              <div data-v-d830712d="" class="remaining-letter bg-primary"><span data-v-d830712d="">1000</span></div>
            </div>
            <div data-v-d830712d="" class="reply hover:text-(--ui-primary)" style="display: none;">
              <div data-v-d830712d="">Never mind</div>
            </div>
            <div data-v-d830712d="" class="reply">
              <div data-v-d830712d="" class="hover:text-(--ui-primary)">Reply</div>
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <transition-group-stub data-v-d830712d="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
            <!--v-if-->
          </div>
        </div>
      </div>
    </transition-group-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`CommentsContainer Snapshot > renders with nested comment correctly 1`] = `
"<div data-v-e7198dba="" class="comments" style="background: transparent;">
  <div data-v-e7198dba="" class="innerWrapper">
    <div data-v-e7198dba="" class="userName">
      <div data-v-e7198dba="" class="addComment">
        <div data-v-e7198dba="" class="w-12 rounded-t-full">
          <!--v-if-->
        </div>
        <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
    <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true">
      <div data-v-d830712d="" data-v-e7198dba="" class="comment-wrapper">
        <div data-v-d830712d="" class="wrapper">
          <div data-v-d830712d="" class="w-12 rounded-t-full"><img data-v-d830712d="" alt="Avatar" data-nuxt-img="" srcset="https://example.com/avatar.jpg 1x, https://example.com/avatar.jpg 2x" class="h-12 w-12 rounded-full p-1" src="https://example.com/avatar.jpg"></div>
          <div data-v-d830712d="" class="comment-wrapper">
            <div data-v-d830712d="" class="name-wrapper">
              <div data-v-d830712d="" class="name text-(--ui-primary)">John Doe</div><span data-v-d830712d="" class="dot">•</span><span data-v-d830712d="" class="time" title="Invalid Date">56 years ago</span>
              <!--v-if-->
              <div data-v-d830712d="" class="expand hover:text-(--ui-primary)"><span data-v-d830712d="" title="Hide Comment">−</span></div>
            </div>
            <div data-v-d830712d="" class="comment bg-white text-black dark:bg-neutral-800 dark:text-white">Great post!</div>
            <div data-v-d830712d="" class="comment-box text-black dark:text-white" style="display: none;">
              <div data-v-d830712d="" class="user-name text-(--ui-primary)">John Doe</div><textarea data-v-d830712d="" name="addUpdate" class="add-comment bg-white dark:bg-neutral-800" placeholder="Update message" spellcheck="false" aria-label="Add Comment"></textarea><button data-v-d830712d="" aria-label="Update" class="bg-primary hover:bg-primary-800"><span data-v-d830712d="">Update</span></button>
              <div data-v-d830712d="" class="remaining-letter bg-primary"><span data-v-d830712d="">1000</span></div>
            </div>
            <div data-v-d830712d="" class="reply hover:text-(--ui-primary)" style="display: none;">
              <div data-v-d830712d="">Never mind</div>
            </div>
            <div data-v-d830712d="" class="reply">
              <div data-v-d830712d="" class="hover:text-(--ui-primary)">Reply</div><span data-v-d830712d="" class="dot">•</span>
              <div data-v-d830712d="" class="hover:text-(--ui-primary)">Hide replies</div>
              <!--v-if-->
            </div>
            <!--v-if-->
            <transition-group-stub data-v-d830712d="" name="fade" tag="div" appear="true" persisted="false" css="true">
              <div data-v-d830712d="" class="comment-wrapper">
                <div data-v-d830712d="" class="wrapper">
                  <div data-v-d830712d="" class="w-12 rounded-t-full"><img data-v-d830712d="" alt="Avatar" data-nuxt-img="" srcset="https://example.com/alice.jpg 1x, https://example.com/alice.jpg 2x" class="h-12 w-12 rounded-full p-1" src="https://example.com/alice.jpg"></div>
                  <div data-v-d830712d="" class="comment-wrapper">
                    <div data-v-d830712d="" class="name-wrapper">
                      <div data-v-d830712d="" class="name text-(--ui-primary)">Alice</div><span data-v-d830712d="" class="dot">•</span><span data-v-d830712d="" class="time" title="Invalid Date">56 years ago</span>
                      <!--v-if-->
                      <div data-v-d830712d="" class="expand hover:text-(--ui-primary)"><span data-v-d830712d="" title="Hide Comment">−</span></div>
                    </div>
                    <div data-v-d830712d="" class="comment bg-white text-black dark:bg-neutral-800 dark:text-white">Nice work!</div>
                    <div data-v-d830712d="" class="comment-box text-black dark:text-white" style="display: none;">
                      <div data-v-d830712d="" class="user-name text-(--ui-primary)">Alice</div><textarea data-v-d830712d="" name="addUpdate" class="add-comment bg-white dark:bg-neutral-800" placeholder="Update message" spellcheck="false" aria-label="Add Comment"></textarea><button data-v-d830712d="" aria-label="Update" class="bg-primary hover:bg-primary-800"><span data-v-d830712d="">Update</span></button>
                      <div data-v-d830712d="" class="remaining-letter bg-primary"><span data-v-d830712d="">1000</span></div>
                    </div>
                    <div data-v-d830712d="" class="reply hover:text-(--ui-primary)" style="display: none;">
                      <div data-v-d830712d="">Never mind</div>
                    </div>
                    <div data-v-d830712d="" class="reply">
                      <div data-v-d830712d="" class="hover:text-(--ui-primary)">Reply</div><span data-v-d830712d="" class="dot">•</span>
                      <div data-v-d830712d="" class="hover:text-(--ui-primary)">Hide replies</div>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                    <transition-group-stub data-v-d830712d="" name="fade" tag="div" appear="true" persisted="false" css="true">
                      <div data-v-d830712d="" class="comment-wrapper">
                        <div data-v-d830712d="" class="wrapper">
                          <div data-v-d830712d="" class="w-12 rounded-t-full"><img data-v-d830712d="" alt="Avatar" data-nuxt-img="" srcset="https://example.com/alice.jpg 1x, https://example.com/alice.jpg 2x" class="h-12 w-12 rounded-full p-1" src="https://example.com/alice.jpg"></div>
                          <div data-v-d830712d="" class="comment-wrapper">
                            <div data-v-d830712d="" class="name-wrapper">
                              <div data-v-d830712d="" class="name text-(--ui-primary)">Alice</div><span data-v-d830712d="" class="dot">•</span><span data-v-d830712d="" class="time" title="Invalid Date">56 years ago</span>
                              <!--v-if-->
                              <div data-v-d830712d="" class="expand hover:text-(--ui-primary)"><span data-v-d830712d="" title="Hide Comment">−</span></div>
                            </div>
                            <div data-v-d830712d="" class="comment bg-white text-black dark:bg-neutral-800 dark:text-white">Nice work!</div>
                            <div data-v-d830712d="" class="comment-box text-black dark:text-white" style="display: none;">
                              <div data-v-d830712d="" class="user-name text-(--ui-primary)">Alice</div><textarea data-v-d830712d="" name="addUpdate" class="add-comment bg-white dark:bg-neutral-800" placeholder="Update message" spellcheck="false" aria-label="Add Comment"></textarea><button data-v-d830712d="" aria-label="Update" class="bg-primary hover:bg-primary-800"><span data-v-d830712d="">Update</span></button>
                              <div data-v-d830712d="" class="remaining-letter bg-primary"><span data-v-d830712d="">1000</span></div>
                            </div>
                            <div data-v-d830712d="" class="reply hover:text-(--ui-primary)" style="display: none;">
                              <div data-v-d830712d="">Never mind</div>
                            </div>
                            <div data-v-d830712d="" class="reply">
                              <div data-v-d830712d="" class="hover:text-(--ui-primary)">Reply</div>
                              <!--v-if-->
                              <!--v-if-->
                            </div>
                            <!--v-if-->
                            <transition-group-stub data-v-d830712d="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
                            <!--v-if-->
                          </div>
                        </div>
                      </div>
                      <div data-v-d830712d="" class="comment-wrapper">
                        <div data-v-d830712d="" class="wrapper">
                          <div data-v-d830712d="" class="w-12 rounded-t-full"><img data-v-d830712d="" alt="Avatar" data-nuxt-img="" srcset="https://example.com/alice.jpg 1x, https://example.com/alice.jpg 2x" class="h-12 w-12 rounded-full p-1" src="https://example.com/alice.jpg"></div>
                          <div data-v-d830712d="" class="comment-wrapper">
                            <div data-v-d830712d="" class="name-wrapper">
                              <div data-v-d830712d="" class="name text-(--ui-primary)">Alice</div><span data-v-d830712d="" class="dot">•</span><span data-v-d830712d="" class="time" title="Invalid Date">56 years ago</span>
                              <!--v-if-->
                              <div data-v-d830712d="" class="expand hover:text-(--ui-primary)"><span data-v-d830712d="" title="Hide Comment">−</span></div>
                            </div>
                            <div data-v-d830712d="" class="comment bg-white text-black dark:bg-neutral-800 dark:text-white">Nice work!</div>
                            <div data-v-d830712d="" class="comment-box text-black dark:text-white" style="display: none;">
                              <div data-v-d830712d="" class="user-name text-(--ui-primary)">Alice</div><textarea data-v-d830712d="" name="addUpdate" class="add-comment bg-white dark:bg-neutral-800" placeholder="Update message" spellcheck="false" aria-label="Add Comment"></textarea><button data-v-d830712d="" aria-label="Update" class="bg-primary hover:bg-primary-800"><span data-v-d830712d="">Update</span></button>
                              <div data-v-d830712d="" class="remaining-letter bg-primary"><span data-v-d830712d="">1000</span></div>
                            </div>
                            <div data-v-d830712d="" class="reply hover:text-(--ui-primary)" style="display: none;">
                              <div data-v-d830712d="">Never mind</div>
                            </div>
                            <div data-v-d830712d="" class="reply">
                              <div data-v-d830712d="" class="hover:text-(--ui-primary)">Reply</div>
                              <!--v-if-->
                              <!--v-if-->
                            </div>
                            <!--v-if-->
                            <transition-group-stub data-v-d830712d="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
                            <!--v-if-->
                          </div>
                        </div>
                      </div>
                    </transition-group-stub>
                    <!--v-if-->
                  </div>
                </div>
              </div>
            </transition-group-stub>
            <!--v-if-->
          </div>
        </div>
      </div>
    </transition-group-stub>
    <!--v-if-->
  </div>
</div>"
`;
